--- a/requirements.txt
+++ b/requirements.txt
@@ -1,76 +1,16 @@
-appnope==0.1.0
-attrs==19.3.0
-backcall==0.2.0
-bleach==3.1.5
 certifi==2020.6.20
 click==7.1.2
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.6.0
-entrypoints==0.3
 Flask==1.1.2
-Flask-SQLAlchemy==2.4.3
-Flask-WTF==0.14.3
 gunicorn==20.0.4
-importlib-metadata @ file:///opt/concourse/worker/volumes/live/290b74d5-e5f3-47ff-7257-17b3c9ccecab/volume/importlib-metadata_1593446478206/work
-ipykernel==5.3.0
-ipython @ file:///opt/concourse/worker/volumes/live/41e43e2f-bbbe-4c76-44fb-a6de0e826dd8/volume/ipython_1593447396701/work
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
 itsdangerous==1.1.0
-jedi @ file:///opt/concourse/worker/volumes/live/1c5c293b-9147-4b4b-5a7f-d3f5eddb8470/volume/jedi_1592841952519/work
 Jinja2==2.11.2
-joblib==0.16.0
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.3
-jupyter-console==6.1.0
-jupyter-core==4.6.3
-kiwisolver==1.2.0
 MarkupSafe==1.1.1
-matplotlib==3.2.2
-mistune==0.8.4
-nbconvert==5.6.1
-nbformat==5.0.7
-notebook==6.0.3
-numpy==1.19.0
-packaging==20.4
-pandas==1.0.5
-pandocfilters==1.4.2
-parso==0.7.0
 pbr==1.8.1
-pexpect==4.8.0
-pickleshare==0.7.5
-prometheus-client==0.8.0
-prompt-toolkit==3.0.5
-psycopg2==2.8.5
-ptyprocess==0.6.0
-Pygments==2.6.1
-pyparsing==2.4.7
-pyrsistent==0.16.0
-python-dateutil==2.8.1
-pytz==2020.1
-pyzmq==19.0.1
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1592848611704/work
-QtPy==1.9.0
-scikit-learn==0.23.1
-scipy==1.5.1
-Send2Trash==1.5.0
-six==1.15.0
-sklearn==0.0
-SQLAlchemy==1.3.18
 stevedore==1.10.0
-terminado==0.8.3
-testpath==0.4.4
-threadpoolctl==2.1.0
-tornado==6.0.4
-traitlets==4.3.3
 virtualenv==14.0.1
 virtualenv-clone==0.2.6
 virtualenvwrapper==4.6.0
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
-webencodings==0.5.1
 Werkzeug==1.0.1
-widgetsnbextension==3.5.1
-WTForms==2.3.1
-zipp==3.1.0
+flask-wtf==0.14.3
+psycopg2==2.8.5
+flask-sqlalchemy==2.4.3
